<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView_user_avatar"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:contentDescription="@string/ImageView_contentDescription_go_to_details_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textView_default_login_user_for_item_holder"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_user_avatar" />

    <TextView
        android:id="@+id/textViewTopString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_text_top_string_plug"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_userRepos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewCenterString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/textViewTopString" />

    <TextView
        android:id="@+id/textViewCenterString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_default_center_string_stub"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/textViewBottomString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewRating"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:contentDescription="@string/ImageView_contentDescription_give_a_rating"
        app:layout_constraintBottom_toBottomOf="@+id/textViewBottomString"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/textViewBottomString"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:text="@string/textView_default_bottom_string_for_item_holder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewRating" />

    <ImageView
        android:id="@+id/imageView_ingBtn_addToFavorites"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/ImageView_contentDescription_add_to_favorites"
        app:layout_constraintEnd_toEndOf="@+id/imageView_user_avatar"
        app:layout_constraintTop_toTopOf="@+id/imageView_user_avatar"
        app:srcCompat="@drawable/ic_baseline_track_changes_24" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_user_avatar" />

    <ImageView
        android:id="@+id/imageView_Error"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="704dp"
        android:contentDescription="@string/ImageView_contentDescription_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_user_avatar"
        app:srcCompat="@drawable/ic_twotone_error_24" />

</androidx.constraintlayout.widget.ConstraintLayout>