<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_image_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_image_selection_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgView_original_img"
        android:layout_width="230dp"
        android:layout_height="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_image_selection"
        tools:srcCompat="@tools:sample/avatars" />
    <ImageView
        android:id="@+id/imgView_get_started_sign"
        android:layout_width="230dp"
        android:layout_height="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_image_selection"
        app:srcCompat="@drawable/get_started_sign" />

    <Button
        android:id="@+id/btn_start_converting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_converting_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgView_original_img" />

    <ImageView
        android:id="@+id/imgView_converted_img"
        android:layout_width="230dp"
        android:layout_height="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/converse_progressBar"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imgView_cancel_sign"
        android:layout_width="230dp"
        android:layout_height="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/converse_progressBar"
        app:srcCompat="@drawable/cancel_sign" />

    <ImageView
        android:id="@+id/imgView_waiting_sign"
        android:layout_width="230dp"
        android:layout_height="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/converse_progressBar"
        app:srcCompat="@drawable/waiting_sign" />

    <ImageView
        android:id="@+id/imgView_error_sign"
        android:layout_width="230dp"
        android:layout_height="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/converse_progressBar"
        app:srcCompat="@drawable/error_sign" />

    <ProgressBar
        android:id="@+id/converse_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_converting" />

    <Button
        android:id="@+id/btn_abort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_abort_converse_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgView_converted_img" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_abort"
        app:layout_constraintEnd_toEndOf="@+id/imgView_converted_img"
        app:layout_constraintStart_toStartOf="@+id/imgView_converted_img"
        app:layout_constraintTop_toBottomOf="@+id/converse_progressBar" />


</androidx.constraintlayout.widget.ConstraintLayout>